<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="company.dreambadly.helldesk.DetailsActivity"
    android:background="@color/bgMain"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zapros"
        android:textSize="28sp"
        android:textColor="@color/bgNavText"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textColor="@color/bgNavText"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/detailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fio"
            android:textSize="18sp"
            android:textColor="@color/bgNavText"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/detailsFio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            android:textColor="@color/bgNavText"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/detailsDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="18sp"
        android:textColor="@color/bgNavText"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/detailsDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textspinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/sp1"
            android:layout_alignParentStart="true"
            android:layout_marginStart="14dp"
            android:text="@string/zaprosStatus"
            android:textColor="@color/bgNavText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sp1"
            android:layout_alignParentEnd="true"
            android:layout_width="141dp"
            android:layout_height="wrap_content"

            android:layout_gravity="right" />

    </RelativeLayout>




</LinearLayout>
