<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgMain"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/oz"
        android:textSize="28sp"
        android:textColor="@color/bgNavText"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/bgNavText"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/bgNavText"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fio"
            android:textColor="@color/bgNavText"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/editFio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/bgNavText" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/bgNavText"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"/>

        <RadioGroup
            android:id="@+id/radioStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="100dp"
            android:gravity="center">

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#DD2C00"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FDD835"
                android:layout_marginStart="10dp"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#1B5E20"
                android:layout_marginStart="10dp"
                android:onClick="onRadioButtonClicked"/>

        </RadioGroup>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textColor="@color/bgNavText"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/editDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/bgNavText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnOtpravit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Отправить запрос"
            android:textColor="@color/bgNavText"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/btnOtmena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Отмена"
            android:textColor="@color/bgNavText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:onClick="onClick"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</LinearLayout>